--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Frikipeques
+title: Frikipeques - blog de frikismo infantil y familiar
 description: 'Blog de frikismo infantil y familiar' # this means to ignore newlines until "baseurl:"
 permalink: ':title:output_ext' # how the permalinks will behave
 baseurl: "/" # the subpath of your site, e.g. /blog
@@ -25,7 +25,7 @@ highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code h
 
 # Author settings
 author: Coconauts # add your name
-author-pic: Myself_Neon_grey.jpg
+#author-pic: Myself_Neon_grey.jpg
 about-author: Coconauts
 
 # Contact links
@@ -39,11 +39,11 @@ bandcamp:  # Add your Bandcamp username
 stackoverflow:  # Add your stackoverflow account
 
 # Newsletter
-mailchimp: "https://github.us1.list-manage.com/subscribe/post?u=8ece198b3eb260e6838461a60&amp;id=397d90b5f4"
+# mailchimp: "https://github.us1.list-manage.com/subscribe/post?u=8ece198b3eb260e6838461a60&amp;id=397d90b5f4"
 
 # Tracker
-analytics: G-R8SZS2YBZK
-fbadmin: ar.maybach
+#analytics: G-R8SZS2YBZK
+#fbadmin: ar.maybach
 
 # Paginate
 paginate: 6
