--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ description: 'Blog de frikismo infantil y familiar' # this means to ignore newli
 permalink: ':title:output_ext' # how the permalinks will behave
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://frikipeques.com" # the base hostname & protocol for your site, e.g. http://example.com
-logo: "/assets/img/branding/kawaiibanner.jpg"
-logo-icon: "/assets/img/branding/MVM-symbol.svg"
-logo-icon-SEO: "/assets/img/branding/MVM-symbol-black.png" # must be a non SVG file
+logo: "/assets/img/branding/fpbanner2.png"
+logo-icon: "/assets/img/branding/fp-logo-sq.png"
+logo-icon-SEO: "/assets/img/branding/fp-logo-sq.png" # must be a non SVG file
 
 # Night/Dark mode
 # Default mode is "auto", "auto" is for auto nightshift
